css/styles.css
/* ... */
.web-header {
  /*float: left;*/
  margin: 0;
  padding-left: 5%;
  display: inline-block;
}

.iconlink {
  margin: 0 5%;
}

.rightlink {
  margin-left: 1%;
}

.container-fluid.bottom {
  margin: 0 5% 15% 5%;
}

.fa.fa-envelope-square,
.fa.fa-linkedin-square,
.fa.fa-github-square,
.fa.fa-behance-square,
.fa.fa-instagram,
.fa.fa-link {
  color: RGBA(52, 30, 38, 1);
}

.fa.fa-envelope-square:hover,
.fa.fa-linkedin-square:hover,
.fa.fa-github-square:hover,
.fa.fa-behance-square:hover,
.fa.fa-instagram:hover,
.fa.fa-link:hover {
  color: RGBA(197, 189, 165, 1);
}

.styled_link {
  color: RGBA(52, 30, 38, 1);
}

.styled_link:hover {
  color: RGBA(197, 189, 165, 1);
}

/*.navbar-inner .container .nav.pull-right > li > a:hover*/
li > a:hover {
  background-color: white;
  background: white;
  color: blue;
}

li:hover {
  background-color: white;
  background: white;
  color: blue;
}

.hi-intro-container {
  max-width: 100%;
  margin: -10% auto 0 auto;
  padding: 0;
}

/*.name-wrap {
display: inline-block;
position: relative;
margin: 0;
height: 100%;
width: 100%;
padding-bottom: 100%;
vertical-align: middle;
overflow: hidden;
}*/
/*.hi-intro-wrap {
margin: 0;
}*/
.name_svg {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}
/*
.name-wrap {
  width: 300px;
  height: 100%;
  left: 0;
  text-align: center;
  margin: 2% auto;
  vertical-align: center;
}*/

/*.navbar-brand
{
    position: absolute;
    width: 300px;
    height: 100%;
    left: 0;
    text-align: center;
    margin: auto;
}*/

